--- a/Android/EKELearn/app/src/main/res/layout/activity_profile.xml
+++ b/Android/EKELearn/app/src/main/res/layout/activity_profile.xml
@@ -11,16 +11,16 @@
         android:id="@+id/tvProfileTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginRight="40dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:background="@color/colorContainer"
         android:gravity="center"
         android:padding="10dp"
-        android:text="Profile"
+        android:text="ProfileName"
         android:textColor="@color/colorText"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -30,6 +30,30 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/tvProfileText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginBottom="8dp"
+        android:background="@color/colorContainer"
+        android:gravity="left"
+        android:padding="10dp"
+        android:textColor="@color/colorText"
+        android:text="Előrehaladás"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/navigationBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvProfileTitle"
+        app:layout_constraintVertical_bias="0.109" />
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/navigationBar"
@@ -102,6 +126,7 @@
             app:layout_constraintStart_toEndOf="@+id/btnLeaderboard"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/profile" />
+
     </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
