--- a/Android/EKELearn/app/src/main/res/values/colors.xml
+++ b/Android/EKELearn/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="colorTextBg">#FFFFFF</color>
     <color name="colorContainer">#FFFFFF</color>
     <color name="colorNavBg">#2699FB</color>
+    <color name="colorNavTOP">#21517A</color>
     <color name="colorNavBtnActive">#FFFFFF</color>
     <color name="colorNavBtn">#68b8fc</color>
 </resources>
