--- a/Android/EKELearn/app/src/main/res/layout/activity_lecture.xml
+++ b/Android/EKELearn/app/src/main/res/layout/activity_lecture.xml
@@ -125,20 +125,22 @@
     <TextView
         android:id="@+id/tvLectureText"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="40dp"
+        android:layout_height="0dp"
+        android:fillViewport="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginRight="40dp"
         android:layout_marginBottom="8dp"
+        android:scrollbars = "vertical"
         android:background="@color/colorContainer"
         android:gravity="fill"
         android:padding="10dp"
         android:text="LectureText"
         android:textSize="14sp"
         android:textStyle="normal"
-        app:layout_constraintBottom_toTopOf="@+id/navigationBar"
+        app:layout_constraintBottom_toTopOf="@+id/btnTask"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvTaskTitle"
