Android APP - Leaderboard topbar fix
A leaderboard felső barján a gombok kicsúsztak a képernyőről. Mostmár nem

--- a/Android/EKELearn/app/src/main/res/layout/activity_leaderboard.xml
+++ b/Android/EKELearn/app/src/main/res/layout/activity_leaderboard.xml
@@ -107,7 +107,8 @@
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/coordinatorLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints">
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
@@ -117,56 +118,58 @@
                 android:id="@+id/toolbarTop"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorNavTOP">
+                android:background="@color/colorNavTOP"
+                android:layout_centerHorizontal="true">
 
-                <ImageButton
-                    android:id="@+id/btnAllTop"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="40dp"
-                    android:layout_marginRight="40dp"
-                    android:background="#00F3F2F2"
-                    android:tint="@color/colorNavBtn"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/profile" />
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-                <ImageButton
-                    android:id="@+id/btnMathTop"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="40dp"
-                    android:layout_marginRight="40dp"
-                    android:background="#00F3F2F2"
-                    android:tint="@color/colorNavBtn"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/profile" />
+                    <ImageButton
+                        android:id="@+id/btnAllTop"
+                        android:layout_weight="1.0"
+                        android:layout_width="0.0dip"
+                        android:layout_height="fill_parent"
+                        android:background="#00F3F2F2"
+                        android:tint="@color/colorNavBtn"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:srcCompat="@drawable/profile" />
 
-                <ImageButton
-                    android:id="@+id/btnHistoryTop"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="40dp"
-                    android:layout_marginRight="40dp"
-                    android:background="#00F3F2F2"
-                    android:tint="@color/colorNavBtn"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/profile" />
+                    <ImageButton
+                        android:id="@+id/btnMathTop"
+                        android:layout_weight="1.0"
+                        android:layout_width="0.0dip"
+                        android:layout_height="fill_parent"
+                        android:background="#00F3F2F2"
+                        android:tint="@color/colorNavBtn"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:srcCompat="@drawable/profile" />
 
-                <ImageButton
-                    android:id="@+id/btnLiteratureTop"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="40dp"
-                    android:layout_marginRight="40dp"
-                    android:background="#00F3F2F2"
-                    android:tint="@color/colorNavBtn"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/profile" />
+                    <ImageButton
+                        android:id="@+id/btnHistoryTop"
+                        android:layout_weight="1.0"
+                        android:layout_width="0.0dip"
+                        android:layout_height="fill_parent"
+                        android:background="#00F3F2F2"
+                        android:tint="@color/colorNavBtn"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:srcCompat="@drawable/profile" />
 
+                    <ImageButton
+                        android:id="@+id/btnLiteratureTop"
+                        android:layout_weight="1.0"
+                        android:layout_width="0.0dip"
+                        android:layout_height="fill_parent"
+                        android:background="#00F3F2F2"
+                        android:tint="@color/colorNavBtn"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:srcCompat="@drawable/profile" />
+                </LinearLayout>
             </android.support.v7.widget.Toolbar>
         </android.support.design.widget.AppBarLayout>
     </android.support.design.widget.CoordinatorLayout>
