--- a/Android/EKELearn/app/src/main/res/layout/activity_lecture.xml
+++ b/Android/EKELearn/app/src/main/res/layout/activity_lecture.xml
@@ -124,6 +124,7 @@
         android:layout_marginRight="40dp"
         android:layout_marginBottom="8dp"
         android:scrollbars = "vertical"
+        android:scrollbarStyle="outsideInset"
         android:background="@color/colorContainer"
         android:gravity="fill"
         android:padding="10dp"
