Android APP - Login és Forgotten fix
Nem volt reszponzív.

--- a/Android/EKELearn/app/src/main/res/layout/activity_forgot_password.xml
+++ b/Android/EKELearn/app/src/main/res/layout/activity_forgot_password.xml
@@ -25,22 +25,25 @@
         app:srcCompat="@drawable/eke_logo"
         tools:src="@drawable/eke_logo" />
 
-    <android.support.constraint.ConstraintLayout
+    <ScrollView
         android:id="@+id/constraintLayout2"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="30dp"
         android:layout_marginLeft="30dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
         android:layout_marginRight="30dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="20dp"
         android:background="@color/colorTextBg"
         app:layout_constraintBottom_toTopOf="@+id/btnUserResultNext"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgLogo"
         app:layout_constraintVertical_bias="0.0">
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/tvUserResultText"
@@ -82,7 +85,7 @@
             app:layout_constraintVertical_bias="0.0" />
 
     </android.support.constraint.ConstraintLayout>
-
+    </ScrollView>
     <Button
         android:id="@+id/btnUserResultNext"
         android:layout_width="0dp"
