--- a/Android/EKELearn/app/src/main/res/layout/activity_login.xml
+++ b/Android/EKELearn/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
         android:layout_height="120dp"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
         android:layout_marginBottom="8dp"
@@ -27,22 +27,24 @@
         app:srcCompat="@drawable/eke_logo"
         tools:src="@drawable/eke_logo" />
 
-    <android.support.constraint.ConstraintLayout
+
+    <ScrollView
         android:id="@+id/constraintLayout2"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
+        android:layout_height="0dp"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="30dp"
-        android:layout_marginEnd="30dp"
         android:layout_marginRight="30dp"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="20dp"
         android:background="@color/colorTextBg"
         app:layout_constraintBottom_toTopOf="@+id/btnUserResultNext"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgLogo"
         app:layout_constraintVertical_bias="0.0">
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/tvUserResultText"
@@ -129,6 +131,7 @@
             app:layout_constraintVertical_bias="0.0" />
 
     </android.support.constraint.ConstraintLayout>
+</ScrollView>
 
     <Button
         android:id="@+id/btnUserResultNext"
